Fix top spacing of Media and Text
- Only applied to the first type of media and text
- This will avoid an empty top space if it is the first element of the page-content

--- a/assets/src/styles/blocks/core-overrides/BlockSpacing.scss
+++ b/assets/src/styles/blocks/core-overrides/BlockSpacing.scss
@@ -1,8 +1,6 @@
 .wp-block-quote,
 .wp-block-file,
 .wp-block-button,
-.page-content > .wp-block-group,
-.page-content > .wp-block-media-text,
 .page-content > h2,
 .page-content > ul > li:last-of-type,
 .page-content > ol > li:last-of-type,
@@ -20,6 +18,21 @@
   @include large-and-up {
     margin-top: $sp-2;
     margin-bottom: $sp-4;
+  }
+}
+
+.page-content > .wp-block-group,
+.page-content > .wp-block-media-text {
+  margin-top: $sp-1;
+  margin-bottom: $sp-2;
+
+  @include large-and-up {
+    margin-top: $sp-2;
+    margin-bottom: $sp-4;
+  }
+
+  &:first-child {
+    margin-top: 0;
   }
 }
 
